# corewar.rs

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/corewar-core/: Cargo.toml
crates/corewar-core/src/: constants.rs  event.rs  instruction.rs  lib.rs  memory.rs  process.rs  warrior.rs
crates/corewar-leaderboard/: Cargo.toml
crates/corewar-leaderboard/src/: history.rs  lib.rs  persistence.rs  rating.rs
crates/corewar-orchestrator/: Cargo.toml
crates/corewar-orchestrator/src/: bridge.rs  instance.rs  lib.rs  scheduler.rs  tournament.rs
crates/corewar-parser/: Cargo.toml
crates/corewar-parser/src/: defaults.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/corewar-parser/tests/: addressing.rs  directives.rs  errors.rs  labels.rs  modifiers.rs  warriors.rs
crates/corewar-protocol/: Cargo.toml
crates/corewar-protocol/src/: encoding.rs  error.rs  lib.rs  messages.rs
crates/corewar-server/: Cargo.toml
crates/corewar-server/src/: connection.rs  handlers.rs  main.rs  state.rs
crates/corewar-viz/: Cargo.toml
crates/corewar-viz/src/: app.rs  camera.rs  color.rs  error.rs  input.rs  lib.rs  network.rs  network_wasm.rs  renderer.rs  state.rs  sync.rs  ui_overlay.rs  web.rs
crates/corewar-vm/: Cargo.toml
crates/corewar-vm/benches/: vm_bench.rs
crates/corewar-vm/src/: address.rs  battle.rs  config.rs  executor.rs  lib.rs  recorder.rs  replay.rs  wasm_api.rs  wasm_utils.rs
crates/corewar-vm/tests/: addressing.rs  edge_cases.rs  opcodes.rs  processes.rs  warriors.rs
crates/corewar-vm/tests/common/: mod.rs
docker/: Dockerfile.server  Dockerfile.viz  docker-compose.yml  nginx.conf
vscode-ext/: .eslintrc.json  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-ext/src/: battleViewProvider.ts  completionProvider.ts  extension.ts  hoverProvider.ts  problemMatcher.ts  redcodeData.ts  taskProvider.ts
vscode-ext/src/webview/: battleEngine.ts  battleView.html  main.ts  renderer.ts  styles.css
vscode-ext/syntaxes/: redcode.tmLanguage.json
vscode-ext/test-files/: sample.red
warriors/: dwarf.red  imp.red  mice.red
wasm/: README.md  build.ps1  build.sh  index.html
wasm/vm/: README.md  build.ps1  index.html
