[workspace]
members = [
    "crates/corewar-core",
    "crates/corewar-parser",
    "crates/corewar-vm",
    "crates/corewar-orchestrator",
    "crates/corewar-leaderboard",
    "crates/corewar-protocol",
    "crates/corewar-server",
    "crates/corewar-viz",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ooeygui/corewar.rs"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# WebGPU
wgpu = "23"
winit = "0.30"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# Parsing
nom = "7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Math
glam = "0.29"

# Utilities
rand = "0.8"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }

# Testing
criterion = "0.5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.release-wasm]
inherits = "release"
opt-level = "s"
