[package]
name = "corewar-leaderboard"
description = "Leaderboard and rating system for CoreWar tournaments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
corewar-core = { path = "../corewar-core" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
