[package]
name = "corewar-parser"
description = "Redcode assembler and parser (ICWS'94 + pMARS extensions)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
corewar-core = { path = "../corewar-core", default-features = false }
nom = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
