[package]
name = "corewar-server"
description = "WebSocket server hosting the CoreWar orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
corewar-core = { path = "../corewar-core" }
corewar-vm = { path = "../corewar-vm" }
corewar-orchestrator = { path = "../corewar-orchestrator" }
corewar-leaderboard = { path = "../corewar-leaderboard" }
corewar-protocol = { path = "../corewar-protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
